--- a/5/Lab 5 - teorio-przykłady-20231116/Lab5_kontury.ipynb
+++ b/5/Lab 5 - teorio-przykłady-20231116/Lab5_kontury.ipynb
@@ -15,12 +15,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "id": "1600b18a",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-25T18:59:16.979485Z",
-     "start_time": "2023-11-25T18:59:16.953983Z"
+     "end_time": "2023-12-23T16:33:33.964500Z",
+     "start_time": "2023-12-23T16:33:33.464791Z"
     }
    },
    "outputs": [],
@@ -32,12 +32,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "id": "166e6dde",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-25T18:59:17.324584Z",
-     "start_time": "2023-11-25T18:59:16.956835Z"
+     "end_time": "2023-12-23T16:33:34.332596Z",
+     "start_time": "2023-12-23T16:33:33.951569Z"
     }
    },
    "outputs": [
@@ -51,7 +51,7 @@
     }
    ],
    "source": [
-    "src = cv2.imread('snooker.jpg')\n",
+    "src = cv2.imread('images/snooker.jpg')\n",
     "plt.imshow(src[..., ::-1]); # ::-1  --  konwersja \"w locie\" do RGB"
    ]
   },
@@ -68,15 +68,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "id": "1ffa571f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-25T18:59:17.495197Z",
-     "start_time": "2023-11-25T18:59:17.324174Z"
+     "end_time": "2023-12-23T16:33:34.624980Z",
+     "start_time": "2023-12-23T16:33:34.332393Z"
     }
    },
    "outputs": [
+    {
+     "data": {
+      "text/plain": "<matplotlib.image.AxesImage at 0x179f0d0a0>"
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
     {
      "data": {
       "text/plain": "<Figure size 640x480 with 1 Axes>",
@@ -101,12 +109,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "id": "b8c5ab5d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-25T18:59:17.649034Z",
-     "start_time": "2023-11-25T18:59:17.492858Z"
+     "end_time": "2023-12-23T16:33:34.774320Z",
+     "start_time": "2023-12-23T16:33:34.624727Z"
     }
    },
    "outputs": [
@@ -126,12 +134,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "id": "3f75aef6",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-25T18:59:17.649431Z",
-     "start_time": "2023-11-25T18:59:17.637863Z"
+     "end_time": "2023-12-23T16:33:34.777678Z",
+     "start_time": "2023-12-23T16:33:34.774235Z"
     }
    },
    "outputs": [
@@ -139,7 +147,7 @@
      "data": {
       "text/plain": "(dtype('uint8'), 255)"
      },
-     "execution_count": 23,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,12 +171,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "id": "b284759c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-25T18:59:17.649550Z",
-     "start_time": "2023-11-25T18:59:17.640461Z"
+     "end_time": "2023-12-23T16:33:34.780483Z",
+     "start_time": "2023-12-23T16:33:34.777083Z"
     }
    },
    "outputs": [],
@@ -187,12 +195,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 7,
    "id": "3e44c703",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-25T19:15:59.726766Z",
-     "start_time": "2023-11-25T19:15:59.723132Z"
+     "end_time": "2023-12-23T16:33:34.807267Z",
+     "start_time": "2023-12-23T16:33:34.780589Z"
     }
    },
    "outputs": [
@@ -210,13 +218,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 8,
    "outputs": [
     {
      "data": {
       "text/plain": "array([[[1346,  940]]], dtype=int32)"
      },
-     "execution_count": 37,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,20 +235,20 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-25T19:16:09.143662Z",
-     "start_time": "2023-11-25T19:16:09.070461Z"
+     "end_time": "2023-12-23T16:33:34.807550Z",
+     "start_time": "2023-12-23T16:33:34.783657Z"
     }
    },
    "id": "a476aef359b6a125"
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 9,
    "id": "caabfa74",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-25T19:16:24.320273Z",
-     "start_time": "2023-11-25T19:16:24.241674Z"
+     "end_time": "2023-12-23T16:33:34.807632Z",
+     "start_time": "2023-12-23T16:33:34.785964Z"
     }
    },
    "outputs": [
@@ -258,12 +266,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "id": "fe9e7a02",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-25T18:59:17.651173Z",
-     "start_time": "2023-11-25T18:59:17.648442Z"
+     "end_time": "2023-12-23T16:33:34.807703Z",
+     "start_time": "2023-12-23T16:33:34.788688Z"
     }
    },
    "outputs": [
@@ -271,7 +279,7 @@
      "data": {
       "text/plain": "dtype('int32')"
      },
-     "execution_count": 27,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,13 +290,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 11,
    "outputs": [
     {
      "data": {
       "text/plain": "array([[[ 1, -1, -1, -1],\n        [ 2,  0, -1, -1],\n        [ 3,  1, -1, -1],\n        [ 4,  2, -1, -1],\n        [ 5,  3, -1, -1],\n        [ 6,  4, -1, -1],\n        [ 7,  5, -1, -1],\n        [ 8,  6, -1, -1],\n        [ 9,  7, -1, -1],\n        [10,  8, -1, -1],\n        [11,  9, -1, -1],\n        [12, 10, -1, -1],\n        [13, 11, -1, -1],\n        [14, 12, -1, -1],\n        [15, 13, -1, -1],\n        [-1, 14, -1, -1]]], dtype=int32)"
      },
-     "execution_count": 40,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,8 +307,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-25T19:16:29.276175Z",
-     "start_time": "2023-11-25T19:16:29.258649Z"
+     "end_time": "2023-12-23T16:33:34.846694Z",
+     "start_time": "2023-12-23T16:33:34.791255Z"
     }
    },
    "id": "760193a728eb5358"
@@ -324,12 +332,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 12,
    "id": "2df2089b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-25T19:36:31.727338Z",
-     "start_time": "2023-11-25T19:36:31.482867Z"
+     "end_time": "2023-12-23T16:33:35.032093Z",
+     "start_time": "2023-12-23T16:33:34.793640Z"
     }
    },
    "outputs": [
@@ -360,12 +368,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 13,
    "id": "5677ffca",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-25T19:39:13.260440Z",
-     "start_time": "2023-11-25T19:39:13.258615Z"
+     "end_time": "2023-12-23T16:33:35.035193Z",
+     "start_time": "2023-12-23T16:33:35.033331Z"
     }
    },
    "outputs": [],
@@ -375,12 +383,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 14,
    "id": "69cbdddb",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-25T19:39:16.874125Z",
-     "start_time": "2023-11-25T19:39:16.866153Z"
+     "end_time": "2023-12-23T16:33:35.039586Z",
+     "start_time": "2023-12-23T16:33:35.036987Z"
     }
    },
    "outputs": [],
@@ -390,12 +398,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 15,
    "id": "5cf78567",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-25T19:39:20.891696Z",
-     "start_time": "2023-11-25T19:39:20.546773Z"
+     "end_time": "2023-12-23T16:33:35.399532Z",
+     "start_time": "2023-12-23T16:33:35.040422Z"
     }
    },
    "outputs": [
@@ -424,12 +432,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 16,
    "id": "27094fd9",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-25T19:39:32.172718Z",
-     "start_time": "2023-11-25T19:39:32.167241Z"
+     "end_time": "2023-12-23T16:33:35.399658Z",
+     "start_time": "2023-12-23T16:33:35.392496Z"
     }
    },
    "outputs": [],
@@ -439,12 +447,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 17,
    "id": "c731007b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-25T19:39:32.774145Z",
-     "start_time": "2023-11-25T19:39:32.767830Z"
+     "end_time": "2023-12-23T16:33:35.399902Z",
+     "start_time": "2023-12-23T16:33:35.394567Z"
     }
    },
    "outputs": [
@@ -452,7 +460,7 @@
      "data": {
       "text/plain": "(1192, 388, 57, 62)"
      },
-     "execution_count": 49,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -463,12 +471,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 18,
    "id": "51907870",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-25T19:39:33.397288Z",
-     "start_time": "2023-11-25T19:39:33.257548Z"
+     "end_time": "2023-12-23T16:33:35.470247Z",
+     "start_time": "2023-12-23T16:33:35.401464Z"
     }
    },
    "outputs": [
@@ -488,11 +496,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "outputs": [],
    "source": [],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-12-23T16:33:35.470379Z",
+     "start_time": "2023-12-23T16:33:35.464586Z"
+    }
    },
    "id": "b28dba6c25f98895"
   }
