--- a/5/Lab 5 - teorio-przykłady-20231116/Lab5_morfologia.ipynb
+++ b/5/Lab 5 - teorio-przykłady-20231116/Lab5_morfologia.ipynb
@@ -22,12 +22,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "id": "d6b44394",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-26T21:33:47.751525Z",
-     "start_time": "2023-11-26T21:33:47.723963Z"
+     "end_time": "2023-12-23T16:34:01.865873Z",
+     "start_time": "2023-12-23T16:34:01.371824Z"
     }
    },
    "outputs": [],
@@ -63,12 +63,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "bbb95830",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-26T21:33:47.888967Z",
-     "start_time": "2023-11-26T21:33:47.726391Z"
+     "end_time": "2023-12-23T16:34:02.029330Z",
+     "start_time": "2023-12-23T16:34:01.862241Z"
     }
    },
    "outputs": [
@@ -123,12 +123,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "id": "a275dab9",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-26T21:33:48.110260Z",
-     "start_time": "2023-11-26T21:33:47.982845Z"
+     "end_time": "2023-12-23T16:34:02.198869Z",
+     "start_time": "2023-12-23T16:34:02.030552Z"
     }
    },
    "outputs": [
@@ -179,12 +179,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "id": "a1b72576",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-26T21:33:48.273630Z",
-     "start_time": "2023-11-26T21:33:48.109682Z"
+     "end_time": "2023-12-23T16:34:02.398380Z",
+     "start_time": "2023-12-23T16:34:02.179148Z"
     }
    },
    "outputs": [
@@ -229,12 +229,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "id": "a2d07b87",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-26T21:33:48.446769Z",
-     "start_time": "2023-11-26T21:33:48.298207Z"
+     "end_time": "2023-12-23T16:34:02.611270Z",
+     "start_time": "2023-12-23T16:34:02.403636Z"
     }
    },
    "outputs": [
@@ -269,12 +269,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "id": "f76e08e1",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-26T21:33:48.619276Z",
-     "start_time": "2023-11-26T21:33:48.443450Z"
+     "end_time": "2023-12-23T16:34:02.851788Z",
+     "start_time": "2023-12-23T16:34:02.613236Z"
     }
    },
    "outputs": [
@@ -322,12 +322,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "id": "656480d3",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-26T21:33:48.960333Z",
-     "start_time": "2023-11-26T21:33:48.638050Z"
+     "end_time": "2023-12-23T16:34:03.146067Z",
+     "start_time": "2023-12-23T16:34:02.850259Z"
     }
    },
    "outputs": [
@@ -361,12 +361,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "id": "549e2908",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-26T21:33:49.133525Z",
-     "start_time": "2023-11-26T21:33:48.961058Z"
+     "end_time": "2023-12-23T16:34:03.354866Z",
+     "start_time": "2023-12-23T16:34:03.147012Z"
     }
    },
    "outputs": [
@@ -399,12 +399,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "id": "a2f2e089",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-26T21:33:49.392920Z",
-     "start_time": "2023-11-26T21:33:49.158018Z"
+     "end_time": "2023-12-23T16:34:03.698335Z",
+     "start_time": "2023-12-23T16:34:03.352137Z"
     }
    },
    "outputs": [
@@ -441,12 +441,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "id": "12fc2ad2",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-26T21:33:49.750303Z",
-     "start_time": "2023-11-26T21:33:49.389034Z"
+     "end_time": "2023-12-23T16:34:04.031376Z",
+     "start_time": "2023-12-23T16:34:03.685140Z"
     }
    },
    "outputs": [
@@ -486,12 +486,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "id": "02bc5f84",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-26T21:33:49.800731Z",
-     "start_time": "2023-11-26T21:33:49.764215Z"
+     "end_time": "2023-12-23T16:34:04.104534Z",
+     "start_time": "2023-12-23T16:34:04.028581Z"
     }
    },
    "outputs": [
@@ -512,11 +512,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "outputs": [],
    "source": [],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-12-23T16:34:04.104758Z",
+     "start_time": "2023-12-23T16:34:04.082853Z"
+    }
    },
    "id": "ee308928df5fa568"
   }
