--- a/5/Lab 5 - zadanie-20231116/Lab5_zadanie.ipynb
+++ b/5/Lab 5 - zadanie-20231116/Lab5_zadanie.ipynb
@@ -12,12 +12,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "id": "b7254d70",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-12-23T19:37:18.657697Z",
-     "start_time": "2023-12-23T19:37:18.235594Z"
+     "end_time": "2023-12-23T20:48:07.259784Z",
+     "start_time": "2023-12-23T20:48:07.213443Z"
     }
    },
    "outputs": [],
@@ -45,12 +45,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "id": "8e2c2b57",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-12-23T19:37:20.273877Z",
-     "start_time": "2023-12-23T19:37:18.658638Z"
+     "end_time": "2023-12-23T20:48:08.830834Z",
+     "start_time": "2023-12-23T20:48:07.216278Z"
     }
    },
    "outputs": [
@@ -64,7 +64,8 @@
     }
    ],
    "source": [
-    "calib = cv2.imread('images/calib.png', cv2.IMREAD_COLOR)\n",
+    "calib = cv2.imread('images/calib.png')\n",
+    "calib = cv2.cvtColor(calib, cv2.COLOR_BGR2RGB)\n",
     "display_images([calib], ['calib'])"
    ]
   },
@@ -80,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "outputs": [],
    "source": [
     "class PillType(Enum):\n",
@@ -94,8 +95,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-23T19:37:20.338255Z",
-     "start_time": "2023-12-23T19:37:20.317633Z"
+     "end_time": "2023-12-23T20:48:08.831085Z",
+     "start_time": "2023-12-23T20:48:08.830504Z"
     }
    },
    "id": "723c072c"
@@ -133,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "outputs": [],
    "source": [
     "def detect_keto(img_bgr):\n",
@@ -155,15 +156,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-23T19:37:20.338409Z",
-     "start_time": "2023-12-23T19:37:20.317738Z"
+     "end_time": "2023-12-23T20:48:08.832008Z",
+     "start_time": "2023-12-23T20:48:08.830745Z"
     }
    },
    "id": "46fa68358b766412"
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "outputs": [],
    "source": [
     "def detect_carbon(\n",
@@ -189,15 +190,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-23T19:37:20.338465Z",
-     "start_time": "2023-12-23T19:37:20.317786Z"
+     "end_time": "2023-12-23T20:48:08.832104Z",
+     "start_time": "2023-12-23T20:48:08.830988Z"
     }
    },
    "id": "de4271dfa300020b"
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "outputs": [],
    "source": [
     "def detect_espu(img, morph=True, kernel_size=3, iterations=1, thresh_val=180):\n",
@@ -217,15 +218,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-23T19:37:20.338515Z",
-     "start_time": "2023-12-23T19:37:20.317813Z"
+     "end_time": "2023-12-23T20:48:08.832214Z",
+     "start_time": "2023-12-23T20:48:08.831141Z"
     }
    },
    "id": "328742f3f6fc3e8d"
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "outputs": [],
    "source": [
     "def detect_biox_probio(img):\n",
@@ -264,15 +265,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-23T19:37:20.338561Z",
-     "start_time": "2023-12-23T19:37:20.317847Z"
+     "end_time": "2023-12-23T20:48:08.832306Z",
+     "start_time": "2023-12-23T20:48:08.831361Z"
     }
    },
    "id": "5ae197473c440ecd"
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "outputs": [],
    "source": [
     "class Pill:\n",
@@ -288,15 +289,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-23T19:37:20.338608Z",
-     "start_time": "2023-12-23T19:37:20.318092Z"
+     "end_time": "2023-12-23T20:48:08.832418Z",
+     "start_time": "2023-12-23T20:48:08.831400Z"
     }
    },
    "id": "e8c981c8"
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "outputs": [],
    "source": [
     "def detect_objects(image: np.ndarray, **kwargs) -> List[Pill]:\n",
@@ -325,15 +326,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-23T19:37:20.338651Z",
-     "start_time": "2023-12-23T19:37:20.318174Z"
+     "end_time": "2023-12-23T20:48:08.832507Z",
+     "start_time": "2023-12-23T20:48:08.831432Z"
     }
    },
    "id": "38a68a33"
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "outputs": [],
    "source": [
     "COLORMAP = {\n",
@@ -366,21 +367,21 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-23T19:37:20.338696Z",
-     "start_time": "2023-12-23T19:37:20.318204Z"
+     "end_time": "2023-12-23T20:48:08.832820Z",
+     "start_time": "2023-12-23T20:48:08.831464Z"
     }
    },
    "id": "214ab71e"
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "outputs": [
     {
      "data": {
-      "text/plain": "[KETO @ (1535, 1039, 52, 58),\n KETO @ (1509, 960, 58, 67),\n KETO @ (1449, 920, 51, 59),\n KETO @ (1492, 857, 57, 58),\n KETO @ (1461, 639, 54, 56),\n KETO @ (1391, 575, 48, 54),\n KETO @ (1421, 477, 42, 44),\n CARBON @ (1188, 954, 170, 222),\n CARBON @ (1136, 665, 197, 116),\n CARBON @ (1115, 545, 206, 74),\n ESPU @ (1746, 1034, 32, 34),\n ESPU @ (1709, 1002, 38, 34),\n ESPU @ (1751, 987, 34, 35),\n ESPU @ (1671, 874, 31, 31),\n ESPU @ (1688, 831, 30, 34),\n ESPU @ (1686, 582, 32, 33),\n ESPU @ (1589, 581, 34, 33),\n ESPU @ (1603, 492, 35, 34),\n BIOX @ (569, 1456, 29, 45),\n BIOX @ (449, 1397, 8, 12),\n BIOX @ (786, 1387, 8, 5),\n BIOX @ (2127, 1368, 6, 4),\n BIOX @ (17, 1562, 34, 37),\n BIOX @ (6, 1440, 29, 29),\n BIOX @ (2552, 1322, 4, 7),\n BIOX @ (414, 1248, 10, 11),\n BIOX @ (1921, 991, 27, 29),\n BIOX @ (1980, 989, 26, 24),\n BIOX @ (1885, 953, 22, 25),\n BIOX @ (1961, 930, 25, 28),\n BIOX @ (1988, 838, 25, 24),\n BIOX @ (1922, 836, 25, 27),\n BIOX @ (0, 792, 28, 72),\n BIOX @ (1945, 787, 23, 24),\n BIOX @ (37, 769, 4, 4),\n BIOX @ (1877, 583, 25, 25),\n BIOX @ (1933, 511, 24, 23),\n BIOX @ (1843, 503, 25, 25),\n BIOX @ (657, 491, 7, 6),\n BIOX @ (679, 484, 3, 5),\n BIOX @ (1870, 412, 25, 25),\n BIOX @ (1179, 191, 15, 13),\n BIOX @ (978, 144, 308, 284),\n BIOX @ (726, 140, 5, 8),\n BIOX @ (1106, 112, 61, 109),\n BIOX @ (704, 67, 29, 30),\n BIOX @ (2721, 610, 29, 29),\n BIOX @ (2713, 466, 29, 29),\n BIOX @ (2697, 420, 35, 31),\n BIOX @ (2297, 291, 33, 31),\n BIOX @ (1348, 258, 32, 33),\n BIOX @ (1579, 254, 32, 32),\n BIOX @ (2753, 216, 29, 29),\n BIOX @ (1738, 205, 29, 29),\n BIOX @ (1444, 202, 29, 29),\n BIOX @ (1767, 180, 30, 30),\n BIOX @ (2725, 164, 35, 42),\n BIOX @ (1294, 146, 29, 29),\n BIOX @ (1397, 112, 30, 30),\n BIOX @ (1736, 102, 29, 30),\n BIOX @ (1787, 94, 31, 35),\n BIOX @ (1383, 84, 29, 29),\n BIOX @ (1578, 81, 29, 29),\n BIOX @ (1838, 68, 29, 30),\n BIOX @ (1674, 31, 29, 29),\n BIOX @ (1356, 31, 29, 29),\n BIOX @ (1893, 24, 32, 33),\n BIOX @ (1206, 0, 10, 16),\n BIOX @ (738, 0, 371, 182),\n BIOX @ (896, 58, 30, 31),\n BIOX @ (649, 0, 15, 25),\n BIOX @ (737, 353, 31, 32),\n BIOX @ (329, 1128, 29, 29),\n BIOX @ (346, 1087, 45, 57),\n BIOX @ (309, 983, 29, 29),\n BIOX @ (364, 914, 30, 32),\n BIOX @ (117, 420, 43, 52),\n BIOX @ (40, 288, 33, 34),\n PROBIO @ (102, 1551, 18, 49),\n PROBIO @ (2717, 1518, 57, 82),\n PROBIO @ (0, 1511, 5, 9),\n PROBIO @ (2363, 1393, 11, 3),\n PROBIO @ (2571, 1283, 138, 223),\n PROBIO @ (2077, 1277, 23, 33),\n PROBIO @ (2064, 1240, 7, 14),\n PROBIO @ (2118, 1225, 137, 244),\n PROBIO @ (2085, 1157, 39, 54),\n PROBIO @ (996, 1042, 159, 67),\n PROBIO @ (207, 1038, 5, 6),\n PROBIO @ (0, 1004, 7, 25),\n PROBIO @ (174, 970, 4, 14),\n PROBIO @ (981, 965, 162, 69),\n PROBIO @ (38, 895, 26, 36),\n PROBIO @ (135, 887, 9, 20),\n PROBIO @ (83, 861, 4, 14),\n PROBIO @ (0, 686, 18, 40),\n PROBIO @ (940, 654, 100, 149),\n PROBIO @ (1018, 522, 65, 161),\n PROBIO @ (841, 346, 6, 10),\n PROBIO @ (941, 199, 12, 17),\n PROBIO @ (747, 175, 14, 26),\n PROBIO @ (664, 27, 180, 161),\n PROBIO @ (1228, 0, 1572, 1337),\n PROBIO @ (546, 0, 300, 475),\n PROBIO @ (0, 0, 815, 1493)]"
+      "text/plain": "[KETO @ (1535, 1039, 52, 58),\n KETO @ (1509, 960, 58, 67),\n KETO @ (1449, 920, 51, 59),\n KETO @ (1492, 857, 57, 58),\n KETO @ (1461, 639, 54, 56),\n KETO @ (1391, 575, 48, 54),\n KETO @ (1421, 477, 42, 44),\n CARBON @ (1188, 954, 170, 222),\n CARBON @ (1136, 665, 197, 116),\n CARBON @ (1115, 545, 207, 75),\n BIOX @ (1536, 1043, 58, 62),\n BIOX @ (702, 948, 239, 363),\n BIOX @ (930, 908, 233, 367),\n BIOX @ (1158, 866, 195, 137),\n BIOX @ (1383, 822, 226, 367),\n BIOX @ (1460, 847, 98, 94),\n BIOX @ (1606, 781, 227, 366),\n BIOX @ (1651, 805, 96, 121),\n BIOX @ (1832, 740, 225, 368),\n BIOX @ (1036, 708, 66, 122),\n BIOX @ (2019, 689, 6, 5),\n BIOX @ (630, 520, 253, 374),\n BIOX @ (716, 511, 9, 6),\n BIOX @ (1310, 407, 233, 365),\n BIOX @ (1347, 596, 81, 66),\n BIOX @ (1384, 476, 86, 74),\n BIOX @ (1533, 374, 232, 357),\n BIOX @ (1570, 557, 76, 76),\n BIOX @ (1584, 468, 77, 76),\n BIOX @ (1753, 307, 232, 385),\n BIOX @ (1836, 384, 88, 86),\n BIOX @ (1971, 268, 233, 383),\n BIOX @ (2008, 337, 105, 175),\n PROBIO @ (1284, 1209, 52, 9),\n PROBIO @ (1278, 1142, 106, 46),\n PROBIO @ (2267, 976, 9, 31),\n PROBIO @ (2237, 856, 6, 15),\n PROBIO @ (2058, 701, 164, 368),\n PROBIO @ (2089, 667, 78, 20),\n PROBIO @ (1111, 629, 196, 67),\n PROBIO @ (2233, 555, 20, 43),\n PROBIO @ (1020, 493, 11, 2),\n PROBIO @ (1579, 363, 12, 3),\n PROBIO @ (1623, 348, 48, 9),\n PROBIO @ (2169, 268, 56, 197)]"
      },
-     "execution_count": 11,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -391,15 +392,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-23T19:37:20.548043Z",
-     "start_time": "2023-12-23T19:37:20.318239Z"
+     "end_time": "2023-12-23T20:48:09.030243Z",
+     "start_time": "2023-12-23T20:48:08.831496Z"
     }
    },
    "id": "564fc11c8eca6d42"
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "outputs": [
     {
      "data": {
@@ -419,15 +420,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-23T19:40:27.543206Z",
-     "start_time": "2023-12-23T19:40:27.138963Z"
+     "end_time": "2023-12-23T20:48:09.392800Z",
+     "start_time": "2023-12-23T20:48:08.937799Z"
     }
    },
    "id": "9ff65290"
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 27,
    "outputs": [
     {
      "data": {
@@ -448,8 +449,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-23T19:40:31.213564Z",
-     "start_time": "2023-12-23T19:40:30.814706Z"
+     "end_time": "2023-12-23T20:48:09.789164Z",
+     "start_time": "2023-12-23T20:48:09.392652Z"
     }
    },
    "id": "543bf448"
@@ -491,12 +492,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 27,
    "id": "e9fda91b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-12-23T19:37:22.366870Z",
-     "start_time": "2023-12-23T19:37:22.365321Z"
+     "end_time": "2023-12-23T20:48:09.789315Z",
+     "start_time": "2023-12-23T20:48:09.788399Z"
     }
    },
    "outputs": [],
